# JNILog

./: README.md  build.gradle  settings.gradle
JNILog/: CMakeLists.txt  build.gradle
JNILog/jni/: JNILog.cpp  global.cpp  global.h  jnilog.cpp  log.cpp  log.h
JNILog/src/main/: AndroidManifest.xml
JNILog/src/main/java/com/sunfusheng/jnilog/: ConfigModel.java  JNILogWrapper.java  LogUtil.java  SerializeHelper.java  SerializeUtil.java
JNILog/src/main/res/values/: strings.xml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jni_log.cpp  jni_log.h  native-lib.cpp
app/src/main/java/com/sunfusheng/jnilog/demo/: AndroidLog.java  JNILogWrapper.java  LogUtil.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
